Fixed footer on mobile

--- a/css/personalized.css
+++ b/css/personalized.css
@@ -29,8 +29,14 @@ body {
 }
 
 #footer {
-	height: 70px;
-	background-color: #F2F2F2;
+	margin-top: 20px;
+	position: static;
+	height: 60px;
+	line-height: 60px;
+}
+
+#footer p {
+	margin: 0;
 }
 
 #cse-search-box {
@@ -109,6 +115,11 @@ blockquote p {
 
 	#header-background {
 		height: 150px;
+	}
+
+	#footer p {
+		margin-right: 20px;
+		margin-left: 20px;
 	}
 }
 
